fixed white circle alignment

--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@ ul{
     background-color: white;
     position: absolute;
     top: 0px;
-    left: -5px;
+    left: -6px;
     border-radius: 50%;
 }
 section{
